--- a/scss/base/_h1-h6-index.scss
+++ b/scss/base/_h1-h6-index.scss
@@ -6,6 +6,7 @@ h1 {
     text-align: center;
     font-weight: bolder;
     @include titulosSize(60px,50px 30px);
+    height: 1rem;
 }
 
 h3 {
@@ -16,6 +17,7 @@ h3 {
     font-family: $tipografiaZen;
     font-weight: bolder;  
     padding: 20px 20px;
+    height: 1rem;
 }
 
 h4 {
@@ -30,6 +32,7 @@ h4 {
     justify-content: center; 
     padding-top: 30px;
     padding-bottom: 30px;
+    height: 1rem;
 }
 
 h5 {
@@ -40,6 +43,7 @@ h5 {
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
+    height: 1rem;
 }
 
 h6 {
@@ -50,5 +54,6 @@ h6 {
     font-style: oblique;
     font-weight: bolder;
     text-align: center;
-    padding-top: 30px
+    padding-top: 30px;
+    height: 1rem;
 }
