--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -3,6 +3,7 @@ footer {
     background-color: nth($colores, 6);
     text-align: center;
     list-style-type: none;
+    height: 1rem;
     nav {
         ul {
             list-style-type: none;
