--- a/scss/componentes/_mainContacto.scss
+++ b/scss/componentes/_mainContacto.scss
@@ -7,6 +7,7 @@
  font-weight: bolder;
  padding-top: 30px;
  padding-bottom: 30px;
+ height: 1rem;
 }
 .subtitulo {
     font-family: $tipografiaZen;
