--- a/scss/componentes/_mainGiftCard.scss
+++ b/scss/componentes/_mainGiftCard.scss
@@ -17,11 +17,13 @@
     padding-top: 20px;
     padding-bottom: 20px;
     color: nth($colores,4);
+    height: 1rem;
 }
 .imgGift {
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
+    height: 1rem;
 }
 .producto {
     padding-top: 20px;
@@ -34,6 +36,7 @@
     font-weight: bolder;
     text-align: center;
     color: nth($colores,4);
+    height: 1rem;
 }
 
 .infoGift {
@@ -42,6 +45,7 @@
  font-size: 20px;
  text-align: center;
  color: nth($colores,4);
+ height: 1rem;
 }
 .pago {
  font-family: $tipografiaZen;
@@ -51,6 +55,7 @@
  font-weight: bolder;
  padding-bottom: 30px;
  color: nth($colores,4);
+ height: 1rem;
 }
 .tituloSquad {
     font-size: 40px;
