--- a/scss/componentes/_mainArmon.scss
+++ b/scss/componentes/_mainArmon.scss
@@ -37,12 +37,13 @@ hr {
     color: nth($colores,4);
     margin: 15px;
     font-style: italic;
-    
+    height: 1rem;
 }
 .imgSeparador {
     grid-area: imgSeparador; 
     grid-column: 1 / 3;
     grid-row: 2 / 2;
+    height: 1rem;
     
 }
 
@@ -56,6 +57,7 @@ hr {
     font-weight: bolder;
     grid-template-columns: 6;
     grid-template-rows: 12;
+    height: 1rem;
     
 }
 
