--- a/css/armon-studio.css
+++ b/css/armon-studio.css
@@ -10,7 +10,8 @@ h1 {
   text-align: center;
   font-weight: bolder;
   font-size: 60px;
-  padding: 50px 30px; }
+  padding: 50px 30px;
+  height: 2rem; }
 
 h3 {
   font-size: 40px;
@@ -19,7 +20,8 @@ h3 {
   text-align: center;
   font-family: "Zen Old Mincho", serif;
   font-weight: bolder;
-  padding: 20px 20px; }
+  padding: 20px 20px;
+  height: 1rem; }
 
 h4 {
   font-size: 30px;
@@ -32,7 +34,8 @@ h4 {
   display: flex;
   justify-content: center;
   padding-top: 30px;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  height: 1rem; }
 
 h5 {
   font-size: 30px;
@@ -41,7 +44,8 @@ h5 {
   font-weight: bolder;
   padding-top: 50px;
   padding-bottom: 50px;
-  text-align: center; }
+  text-align: center;
+  height: 1rem; }
 
 h6 {
   background-color: #f9f3fc;
@@ -51,12 +55,14 @@ h6 {
   font-style: oblique;
   font-weight: bolder;
   text-align: center;
-  padding-top: 30px; }
+  padding-top: 30px;
+  height: 1rem; }
 
 footer {
   background-color: #f9f3fc;
   text-align: center;
-  list-style-type: none; }
+  list-style-type: none;
+  height: 1rem; }
   footer nav ul {
     list-style-type: none; }
     footer nav ul li {
@@ -99,7 +105,8 @@ a:hover {
 .container {
   padding-top: 50px;
   padding-bottom: 50px;
-  display: flex; }
+  display: flex;
+  height: 1rem; }
 
 .parrafoCarousel {
   font-family: "Zen Old Mincho", serif;
@@ -134,7 +141,8 @@ a:hover {
   display: flex;
   justify-content: center;
   border-radius: 1px solid #996899;
-  padding: 30px 30px; }
+  padding: 30px 30px;
+  height: 1rem; }
 
 .est, .mar, .dist {
   width: 250px;
@@ -162,7 +170,8 @@ a:hover {
   justify-content: center; }
 
 .armonContainer {
-  background-image: linear-gradient(to left, #cb9cdd, #c792d9, #c389d6, #bf7fd2, #bb75ce, #c07bd1, #c582d3, #ca88d6, #d8a0e0, #e6b8ea, #f3d0f4, #ffe8ff); }
+  background-image: linear-gradient(to left, #cb9cdd, #c792d9, #c389d6, #bf7fd2, #bb75ce, #c07bd1, #c582d3, #ca88d6, #d8a0e0, #e6b8ea, #f3d0f4, #ffe8ff);
+  height: 1rem; }
 
 .queEsArmon {
   font-size: 20px;
@@ -196,7 +205,8 @@ a:hover {
   padding: 20px 20px;
   margin: 1rem;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  height: 1rem; }
 
 .imgPrint {
   text-align: center;
@@ -221,7 +231,8 @@ a:hover {
   transition: all 1s; }
 
 header {
-  background-color: #f9f3fc; }
+  background-color: #f9f3fc;
+  height: 2rem; }
 
 .bg-geri {
   background-color: #f9f3fc; }
@@ -251,7 +262,8 @@ body {
   font-family: "Raleway", sans-serif;
   font-weight: bolder;
   padding-top: 30px;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  height: 1rem; }
 
 .seccionUno, .seccionDos,
 .seccionTres, .seccionCuatro, .seccionCinco,
@@ -332,7 +344,8 @@ hr {
   font-family: "Raleway", sans-serif;
   font-weight: bolder;
   padding-top: 30px;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  height: 1rem; }
 
 .mainP {
   grid-area: mainP;
@@ -342,12 +355,14 @@ hr {
   font-family: "Zen Old Mincho", serif;
   color: #0f0b0f;
   margin: 15px;
-  font-style: italic; }
+  font-style: italic;
+  height: 1rem; }
 
 .imgSeparador {
   grid-area: imgSeparador;
   grid-column: 1 / 3;
-  grid-row: 2 / 2; }
+  grid-row: 2 / 2;
+  height: 1rem; }
 
 .modGustarte {
   grid-area: modGustarte;
@@ -358,7 +373,8 @@ hr {
   font-size: 30px;
   font-weight: bolder;
   grid-template-columns: 6;
-  grid-template-rows: 12; }
+  grid-template-rows: 12;
+  height: 1rem; }
 
 .img1 {
   grid-area: img1;
@@ -410,7 +426,8 @@ hr {
   text-align: center;
   font-weight: bolder;
   padding: 30px 30px;
-  width: 100%; }
+  width: 100%;
+  height: 1rem; }
 
 .regalo {
   font-size: 40px;
@@ -420,12 +437,14 @@ hr {
   font-weight: bolder;
   padding-top: 20px;
   padding-bottom: 20px;
-  color: #0f0b0f; }
+  color: #0f0b0f;
+  height: 1rem; }
 
 .imgGift {
   display: flex;
   justify-content: center;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  height: 1rem; }
 
 .producto {
   padding-top: 20px; }
@@ -436,14 +455,16 @@ hr {
   font-style: italic;
   font-weight: bolder;
   text-align: center;
-  color: #0f0b0f; }
+  color: #0f0b0f;
+  height: 1rem; }
 
 .infoGift {
   font-family: "Zen Old Mincho", serif;
   font-style: italic;
   font-size: 20px;
   text-align: center;
-  color: #0f0b0f; }
+  color: #0f0b0f;
+  height: 1rem; }
 
 .pago {
   font-family: "Zen Old Mincho", serif;
@@ -452,7 +473,8 @@ hr {
   text-align: center;
   font-weight: bolder;
   padding-bottom: 30px;
-  color: #0f0b0f; }
+  color: #0f0b0f;
+  height: 1rem; }
 
 .tituloSquad {
   font-size: 40px;
@@ -486,7 +508,8 @@ hr {
   font-family: "Raleway", sans-serif;
   font-weight: bolder;
   padding-top: 30px;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  height: 1rem; }
 
 .subtitulo {
   font-family: "Zen Old Mincho", serif;
@@ -515,23 +538,16 @@ hr {
   letter-spacing: 0.5px;
   color: #0f0b0f; }
 
-.containerForm {
+.formContact {
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  width: 100%;
-  padding-top: 60px;
-  padding-bottom: 60px; }
+  margin-top: 1rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  font-family: "Zen Old Mincho", serif; }
 
-.formulario {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  background-color: #996899;
-  color: whitesmoke;
-  font-family: "Zen Old Mincho", serif;
-  font-size: 20px; }
+.btn-primary {
+  color: #3e2d4b; }
 
 /*Mobile*/
 @media only screen and (min-width: 320px) and (max-width: 500px) {
