--- a/css/armon-studio.css
+++ b/css/armon-studio.css
@@ -134,7 +134,8 @@ a:hover {
   display: flex;
   justify-content: center;
   border-radius: 1px solid #996899;
-  padding: 30px 30px; }
+  padding: 30px 30px;
+  width: 100%; }
 
 .est, .mar, .dist {
   width: 250px;
