--- a/scss/componentes/_mainIndex.scss
+++ b/scss/componentes/_mainIndex.scss
@@ -39,7 +39,8 @@
     display: flex;
     justify-content: center;
     border-radius: 1px solid nth($colores,3);
-    padding: 30px 30px;   
+    padding: 30px 30px; 
+    width: 100%;  
 }
 
 .est, .mar, .dist {
