--- a/css/armon-studio.css
+++ b/css/armon-studio.css
@@ -9,7 +9,7 @@ h1 {
   font-family: "Raleway", sans-serif;
   text-align: center;
   font-weight: bolder;
-  font-size: 60px;
+  font-size: 50px;
   padding: 50px 30px; }
 
 h3 {
@@ -522,10 +522,14 @@ hr {
   margin-top: 1rem;
   margin-left: 3rem;
   margin-right: 3rem;
-  font-family: "Zen Old Mincho", serif; }
+  font-family: "Zen Old Mincho", serif;
+  font-size: 20px;
+  margin-bottom: 3rem; }
 
-.btn-primary {
-  color: #3e2d4b; }
+.btn {
+  color: whitesmoke;
+  background-color: #996899;
+  margin-bottom: 3rem; }
 
 /*Mobile*/
 @media only screen and (min-width: 320px) and (max-width: 500px) {
