--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -6,7 +6,9 @@ header {
 .bg-geri {
     background-color: nth($colores, 6);
 }
-
+.navbar {
+    height: 1rem;
+}
 body {
     background-color: nth($colores, 6);
 }
