--- a/scss/componentes/_mainArmon.scss
+++ b/scss/componentes/_mainArmon.scss
@@ -32,7 +32,7 @@ hr {
     text-align: center;
     font-size: 20px;
     font-weight: lighter;
-    font-family: $tipografiaZen;
+    font-family: $tipografiaRaleway;
     color: nth($colores,4);
     margin: 15px;
     font-style: italic;
