--- a/scss/componentes/_mainContacto.scss
+++ b/scss/componentes/_mainContacto.scss
@@ -45,7 +45,12 @@
     margin-left: 3rem;
     margin-right: 3rem;
     font-family: $tipografiaZen;
+    font-size: 20px;
+    margin-bottom: 3rem;
+    
 }
-.btn-primary {
-    color: nth($colores, 5);
+.btn {
+    color: nth($colores,1);
+    background-color: nth($colores,3);
+    margin-bottom: 3rem;
 }
