--- a/css/armon-studio.css
+++ b/css/armon-studio.css
@@ -10,7 +10,8 @@ h1 {
   text-align: center;
   font-weight: bolder;
   font-size: 50px;
-  padding: 50px 30px; }
+  padding-top: 30px;
+  padding-bottom: 30px; }
 
 h3 {
   font-size: 40px;
@@ -22,7 +23,7 @@ h3 {
   padding: 20px 20px; }
 
 h4 {
-  font-size: 30px;
+  font-size: 50px;
   color: #e0d8d8;
   background-color: #4e1c5cd3;
   letter-spacing: 1px;
@@ -227,6 +228,9 @@ header {
 .bg-geri {
   background-color: #f9f3fc; }
 
+.navbar {
+  height: 1rem; }
+
 body {
   background-color: #f9f3fc; }
 
@@ -340,7 +344,7 @@ hr {
   text-align: center;
   font-size: 20px;
   font-weight: lighter;
-  font-family: "Zen Old Mincho", serif;
+  font-family: "Raleway", sans-serif;
   color: #0f0b0f;
   margin: 15px;
   font-style: italic; }
