--- a/scss/componentes/_mainIndex.scss
+++ b/scss/componentes/_mainIndex.scss
@@ -106,6 +106,7 @@
     margin: 1rem;
     display: flex;
     justify-content: center;
+    margin-top: 1rem;
 }
 .imgPrint {
     text-align: center;
