--- a/css/armon-studio.css
+++ b/css/armon-studio.css
@@ -42,7 +42,8 @@ h5 {
   font-weight: bolder;
   padding-top: 50px;
   padding-bottom: 50px;
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 1rem; }
 
 h6 {
   background-color: #f9f3fc;
@@ -198,7 +199,8 @@ a:hover {
   padding: 20px 20px;
   margin: 1rem;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 1rem; }
 
 .imgPrint {
   text-align: center;
@@ -227,9 +229,6 @@ header {
 
 .bg-geri {
   background-color: #f9f3fc; }
-
-.navbar {
-  height: 1rem; }
 
 body {
   background-color: #f9f3fc; }
