--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -15,6 +15,9 @@ footer {
                  display: inline-block;
                  text-align: center;
                 }
+                .envios {
+                    color: nth ($colores, 6)
+                }
             }
         }
     }
