--- a/css/armon-studio.css
+++ b/css/armon-studio.css
@@ -1,3 +1,7 @@
+*{
+  margin : 0;
+  padding : 0;
+}
 .verModelo:hover, .verMas:hover, .verCarra:hover, .verMila:hover, .verAfrica:hover {
   color: #0f0b0f;
   font-weight: bolder;
@@ -56,14 +60,14 @@ h6 {
   padding-top: 30px; }
 
 footer {
-  background-color: #f9f3fc;
+  background-color: #3e2d4b;
   text-align: center;
   list-style-type: none; }
   footer nav ul {
     list-style-type: none; }
     footer nav ul li a {
       font-size: 40px;
-      color: #3e2d4b;
+      color: #e0d8d8;
       font-family: "Zen Old Mincho", serif;
       display: inline-block;
       text-align: center; }
@@ -71,12 +75,12 @@ footer {
       color: nth whitesmoke, #9550A6, #996899, #0f0b0f, #3e2d4b, #f9f3fc, #e0d8d8, #6a2d83, #4e1c5cd3, 6; }
 
 .followUs {
-  color: #0f0b0f;
+  color: #e0d8d8;
   font-weight: bolder;
-  font-size: 15px; }
+  font-size: 20px; }
 
 .info, .infoFooter {
-  color: #996899;
+  color: #e0d8d8;
   font-weight: initial;
   list-style-type: none; }
 
@@ -103,7 +107,7 @@ a:hover {
   text-align: center; }
 
 .envios {
-  color: nth whitesmoke, #9550A6, #996899, #0f0b0f, #3e2d4b, #f9f3fc, #e0d8d8, #6a2d83, #4e1c5cd3, 6; }
+  color: #e0d8d8 }
 
 .container {
   padding-top: 50px;
@@ -316,18 +320,23 @@ body {
   text-align: center; }
 
 .volverAHome {
-  font-size: 20px;
+  font-size: 27px;
   color: #996899;
   font-family: "Zen Old Mincho", serif;
   padding: 50px 50px;
-  margin: 30px;
-  background-color: #f9f3fc; }
+  margin: 30px; 
+  }
 
 .mainArmon {
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-template-areas: "mainP mainP mainP" "imgSeparador imgSeparador imgSeparador" "hr hr hr" "modGustarte modGustarte modGustarte" "img1 img2 img3" "verCarra verMila verAfrica";
+  grid-template-areas: "mainP mainP mainP"
+ "imgSeparador imgSeparador imgSeparador"
+ "hr hr hr"
+ "modGustarte modGustarte modGustarte"
+ "img1 img2 img3"
+ "verCarra verMila verAfrica";
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr); }
 
@@ -356,14 +365,12 @@ hr {
   font-style: italic; }
 
 .imgSeparador {
-  grid-area: imgSeparador;
-  grid-column: 1 / 3;
-  grid-row: 2 / 2; }
+  display: flex}
 
 .modGustarte {
   grid-area: modGustarte;
   text-align: center;
-  background-color: whitesmoke;
+  background-color: #f9f3fc;
   color: #3e2d4b;
   font-family: "Zen Old Mincho", serif;
   font-size: 30px;
@@ -619,7 +626,18 @@ hr {
   .mainArmon {
     display: grid;
     align-items: center;
-    grid-template-areas: "mainP" "mainP" "mainP" "imgSeparador" "modGustarte" "modGustarte" "img1" "verCarra" "img2" "verMila" "img3" "verAfrica";
+    grid-template-areas: "mainP"
+ "mainP"
+ "mainP"
+ "imgSeparador"
+ "modGustarte"
+ "modGustarte"
+ "img1"
+ "verCarra"
+ "img2"
+ "verMila"
+ "img3"
+ "verAfrica";
     grid-template-columns: unset; }
   .mainP {
     grid-area: mainP;
@@ -630,13 +648,16 @@ hr {
     margin-left: 5px; }
   .modGustarte {
     grid-area: modGustarte;
+    background-color: #e0d8d8;
     font-size: 25px;
     padding-top: 50px; }
   .imgSeparador {
-    grid-area: imgSeparador;
-    width: 100%; }
+    display: flex ;
+    width: 350px;
+    height: 250px; }
   .imgMarti {
-    width: 100%; }
+    width: 350px;
+    height: 250px; }
   .img1 {
     grid-area: img1;
     width: 100%; }
@@ -710,7 +731,15 @@ hr {
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-areas: "mainP" "imgSeparador" "modGustarte" "img1" "verCarra" "img2" "verMila" "img3" "verAfrica";
+    grid-template-areas: "mainP"
+ "imgSeparador"
+ "modGustarte"
+ "img1"
+ "verCarra"
+ "img2"
+ "verMila"
+ "img3"
+ "verAfrica";
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr); }
   .mainP {
@@ -735,7 +764,14 @@ hr {
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-areas: "mainP mainP mainP" "mainP mainP mainP" "imgSeparador imgSeparador imgSeparador" "hr hr hr" "modGustarte modGustarte modGustarte" "modGustarte modGustarte modGustarte" "img1 img2 img3" "verCarra verMila verAfrica"; }
+    grid-template-areas: "mainP mainP mainP"
+ "mainP mainP mainP"
+ "imgSeparador imgSeparador imgSeparador"
+ "hr hr hr"
+ "modGustarte modGustarte modGustarte"
+ "modGustarte modGustarte modGustarte"
+ "img1 img2 img3"
+ "verCarra verMila verAfrica"; }
   .mainP {
     grid-area: mainP; }
   .imgSeparador {
